@@ -1,6 +1,7 @@
 * 2005-05-15 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Patch from James Graham to make Ctrl+P print
 	- Patch adapted from James to make new documents start in new windows
+	- Add context menu to plot window to change update period
 	
 * 2005-05-14 Jeremy Sanders <jeremy@jeremysanders.net>
 	- New widget property code using QTable
